ncc/testsuite/positive/Issue-git-0389.n

public static class MyClassExtensions
{
    public static HelloWorld(this _obj : MyNamespace.MyClass) : void
    {
        System.Console.WriteLine("Hello, world!");
    }
}

namespace MyNamespace
{
    public class MyClass
    {
    }
}

namespace OtherNamespace
{
    module Program
    {
        Main() : void
        {
            def obj = MyNamespace.MyClass();
            obj.HelloWorld();
        }
    }
}

/*
BEGIN-OUTPUT
Hello, world!
END-OUTPUT
*/
