ncc/testsuite/negative/Issue-861.n
public class C1 
{
  protected this() {}
}
public class C2 : C1
{
  static Main() : void {}
  
  public static Do() : void
  {
      def obj = C1(); //<- compiles successfully (1)
      _ = obj.MemberwiseClone(); // <- compiles successfully
  }
}
